--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.debatty</groupId>
     <artifactId>java-graphs</artifactId>
-    <version>0.3</version>  
+    <version>0.4</version>  
     <packaging>jar</packaging>
   
     <name>${project.artifactId}</name>
@@ -116,6 +116,23 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-lsh</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-string-similarity</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-spamsum</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
 
 
