--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.debatty</groupId>
     <artifactId>java-graphs</artifactId>
-    <version>0.4-SNAPSHOT</version>  
+    <version>0.4</version>  
     <packaging>jar</packaging>
   
     <name>${project.artifactId}</name>
@@ -36,7 +34,8 @@
         <connection>scm:git:git@github.com:tdebatty/java-graphs.git</connection>
         <developerConnection>scm:git:git@github.com:tdebatty/java-graphs.git</developerConnection>
         <url>git@github.com:tdebatty/java-graphs.git</url>
-    </scm>
+      <tag>v0.4</tag>
+  </scm>
   
     <distributionManagement>
         <snapshotRepository>
