--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.debatty</groupId>
     <artifactId>java-graphs</artifactId>
-    <version>0.7-SNAPSHOT</version>  
+    <version>0.7</version>  
     <packaging>jar</packaging>
   
     <name>${project.artifactId}</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git@github.com:tdebatty/java-graphs.git</connection>
         <developerConnection>scm:git:git@github.com:tdebatty/java-graphs.git</developerConnection>
         <url>git@github.com:tdebatty/java-graphs.git</url>
-      <tag>HEAD</tag>
+      <tag>v0.7</tag>
   </scm>
   
     <distributionManagement>
