--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,18 @@
 
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-string-similarity</artifactId>
+            <version>0.13-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-spamsum</artifactId>
+            <version>0.1</version>
+        </dependency>
+    </dependencies>
 </project>
 
 
