--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
             <artifactId>java-spamsum</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
 
