--- a/pom.xml
+++ b/pom.xml
@@ -129,11 +129,6 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>java-string-similarity</artifactId>
-            <version>0.13-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
             <artifactId>java-spamsum</artifactId>
             <version>0.1</version>
         </dependency>
@@ -142,6 +137,11 @@
             <artifactId>junit</artifactId>
             <version>3.8.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-string-similarity</artifactId>
+            <version>0.13</version>
         </dependency>
     </dependencies>
 </project>
