--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
         <connection>scm:git:git@github.com:tdebatty/java-graphs.git</connection>
         <developerConnection>scm:git:git@github.com:tdebatty/java-graphs.git</developerConnection>
         <url>git@github.com:tdebatty/java-graphs.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
   
     <distributionManagement>
         <snapshotRepository>
@@ -124,14 +124,30 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <maxmem>256m</maxmem>
+                    <!-- aggregated reports for multi-module projects -->
+                    <aggregate>true</aggregate>
+                    <instrumentation>
+                        <excludes>
+                            <exclude>info/debatty/java/graphs/examples/**/*.class</exclude>
+                        </excludes>
+                    </instrumentation>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>java-spamsum</artifactId>
-            <version>0.1</version>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -142,6 +158,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>java-string-similarity</artifactId>
             <version>0.13</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>java-spamsum</artifactId>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 </project>
