--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip=true
 
-#after_success:
-#  - mvn clean cobertura:cobertura coveralls:report
+after_success:
+  - mvn clean cobertura:cobertura coveralls:report
