--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.debatty</groupId>
     <artifactId>java-graphs</artifactId>
-    <version>0.26</version>
+    <version>0.27-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git@github.com:tdebatty/java-graphs.git</connection>
         <developerConnection>scm:git:git@github.com:tdebatty/java-graphs.git</developerConnection>
         <url>git@github.com:tdebatty/java-graphs.git</url>
-        <tag>v0.26</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
