Use SLF4J logging facade

--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,28 @@
             <artifactId>java-spamsum</artifactId>
             <version>0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.22</version>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
 
